--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/router": "^15.2.0",
     "angular-cli-ghpages": "^1.0.5",
     "array-shuffle": "^3.0.0",
+    "postcss": "^8.4.31",
     "rxjs": "~7.8.0",
+    "semver": "^7.5.4",
+    "socket.io-parser": "^4.2.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
