--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "buildProd": "ng build --configuration production --base-href 'https://singulocity.github.io/game-complex/'",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "publish": "npx angular-cli-ghpages --dir=dist/game-complex"
+    "publish": "npm run buildProd && npx angular-cli-ghpages --dir=dist/game-complex"
   },
   "private": true,
   "dependencies": {
