--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "buildProd": "ng build --configuration production --base-href 'https://singulocity.github.io/game-complex/'",
+    "buildProd": "ng build --configuration production --base-href https://singulocity.github.io/game-complex/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "publish": "npm run buildProd && npx angular-cli-ghpages --dir=dist/game-complex"
