--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:prod": "ng build --configuration production --base-href https://singulocity.github.io/game-complex/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "publish": "npm run buildProd && npx angular-cli-ghpages --dir=dist/game-complex"
+    "publish": "npm run build:prod && npx angular-cli-ghpages --dir=dist/game-complex"
   },
   "private": true,
   "dependencies": {
