--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "ng build",
     "build:prod": "ng build --configuration production --base-href https://singulocity.github.io/game-complex/",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "publish": "npm run build:prod && npx angular-cli-ghpages --dir=dist/game-complex"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
