--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod": "ng build --configuration production --base-href https://singulocity.github.io/game-complex/",
+    "build:prod": "ng build --configuration production --base-href https://lordsingulo.github.io/game-complex/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
